[build-system]
requires = [
    "setuptools>=82.0",
    "wheel>=0.47"
]
build-backend = "setuptools.build_meta"

[project]
name = "arcline"
dynamic = ["version"]
description = "A Python Framework for Supply Chain Network Optimizer"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "ZenithClown", email = "dpramanik.official@gmail.com"}
]

keywords = [
    "supply chain", "network optimization", "share of business"
]

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/growthio/arcline"
Repository = "https://github.com/growthio/arcline"
Issues = "https://github.com/growthio/arcline/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.setuptools.dynamic]
version = {attr = "arcline.__version__"}
